# terrarium

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
examples/: custom-tab.toml  shortcuts.toml
src/: action.rs  app.rs  config.rs  error.rs  keys.rs  main.rs  tui.rs  util.rs
src/k8s/: actions.rs  client.rs  controller.rs  kustomization.rs  metrics.rs  mod.rs  runners.rs  terraform.rs  watcher.rs
src/state/: store.rs
src/ui/: controller_dashboard.rs  custom_tab.rs  dialog.rs  help.rs  kustomization_detail.rs  kustomization_list.rs  layout.rs  mod.rs  namespace_picker.rs  resource_list.rs  runner_list.rs  status_bar.rs  terraform_detail.rs  theme.rs
