[package]
name = "terrarium"
version = "0.0.4"
edition = "2024"
rust-version = "1.88"
default-run = "terrarium"
description = "A terminal dashboard for managing tofu-controller Terraform and Flux Kustomization resources in Kubernetes"
license = "GPL-3.0-or-later"
repository = "https://github.com/fenio/terrarium"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
jiff = "0.2.23"
k8s-openapi = { version = "0.27.1", features = ["latest", "schemars"] }
kube = { version = "3.1.0", features = ["runtime", "derive", "client", "ws"] }
ratatui = "0.30.0"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
toml = "1"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
